--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Elena Martinez - Film Director/Producer </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Elena Martinez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/elenamartinez.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,30 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Elena Martinez
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Film Production 🎥/ Media and Cultural Studies 📚</div>
+        <p class="lead mb-4">Hello, my name is Elena Martinez and I am an undergraduate student at the University of California, Riverside. I am currently double-majoring in Media and Cultural Studies and Film and Digital Production. One day I wish to pursue a career in the film-making path, with a focus on directing and producing. 
+Recently, I have gained experience on pitching ideas to a variety of people, some of those which have helped me create the storyboard for my first feature film. I have produced some other smaller short-films by myself, but I have found that working with more people creates better outcomes. 
+<br><br>
 
-        Enter bio here<br><br>
+        I really enjoy watching movies (obviously) with my friends and family. I also watch a lot of television shows and YouTube videos with them as well. This only enhances my love for my craft and inspires me to create my own material. 
+I have a lot of experience from high school, where I discovered my passion for creating videos. This experience includes photography, where I focused on lighting and angles, and digital editing, where I gained a lot of knowledge with programs such as adobe photoshop, illustrator, and of course premier. I was also involved in a news channel club, where I learned basic skills in directing and working on an actual set. 
+Since I have been in college, I have learned some other helpful skills, more specifically in screenwriting, which is opening more opportunities to network as well as strengthen some of my already-existing skills. I have been involved in a group that discusses ideas and helps build on movie pitches.
+<br><br>
 
-        Enter bio here
+        Besides that, I have other hobbies such as painting, sculpting, and sewing. I have a small online boutique that I run; however, I consider it to be another hobby rather than a side job. 
+In my free time I like to shop for second-hand clothing (thrifting) or spend the day in the kitchen trying out new recipes to cook or bake. I love my pet cat and all the other animals that my parents have back at home. I try to incorporate all of my hobbies into the films that I make, just so I know that I am creating something that I love out of the things that I love. 
+
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/elenamartinez1200">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/seethelena">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:emart109@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +96,50 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Painting Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Artistic Expressions AV</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Organized supplies into company vehicle<br> 
+              • Coordinated set-up area for classes<br>
+              • Photographed finished paintings<br>
+              • Developed and maintained company website<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2017 - September 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Student Poll Worker</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">LA County 2016 Election</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Assisted with registration of voters and sign in<br>
+              • Directed voters to available poll booths<br>
+              • Clarified any concerns or issues with voters<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">November 2016 - November 2016</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Dog Bather</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Blanca's Dog Grooming</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Organized and filed clientele documents for the business.<br>
+            • Supervised the dogs until ready for pickup by clients.<br>
+            • Maintained wellness of dogs with routine walks and meals<br>
+            • Thoroughly washed and blow dried dogs<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2016- March 2018</span>
           </div>
         </div>
 
@@ -151,38 +157,25 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">University of California Riverside</h3>
+            <div class="subheading mb-3">Bachelors of Media and Cultural Studies</div>
+            <div>Bachelor of Arts in Media and Cultural Studies</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2018 - June 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Bachelors in Theater, Film, and Digital Production</div>
+            <div>Bachelor of Arts in Theater, Film, and Digital Production with a focus in Film-making</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">September 2018 - June 2022</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -191,7 +184,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/EMimage1.jpg" width="400px"> <img src="img/EMimage2.jpg" width="400px"> <br>
+            <br>
+            <img src="img/EMimage3.jpg" width="400px"> <img src="img/EMimage4.jpg" width="400px"> <br>
+            <br>
+            <img src="img/EMimage5.jpg" width="400px"> <img src="img/EMimage6.jpg" width="400px"> <br>
+            <br>
         </center>
       </div>
     </section>
@@ -199,7 +197,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Elena Martinez</center><br>
 
 
   </div>
